// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> renders correctly 1`] = `
<div
  className="nz-popup-popover-popover nz-direction-left"
/>
`;

exports[`<Popover /> should set direction class 1`] = `
<div
  className="nz-popup-popover-popover nz-direction-right"
/>
`;
